@@ -226,6 +226,7 @@
 #gptofoo escp2-cx3500 printer/Epson-Stylus_CX3500
 #gptofoo escp2-cx3600 printer/Epson-Stylus_CX3600
 #gptofoo escp2-cx3650 printer/Epson-Stylus_CX3650
+#gptofoo escp2-cx3800 printer/Epson-Stylus_CX3800
 #gptofoo escp2-cx4600 printer/Epson-Stylus_CX4600
 #gptofoo escp2-cx5100 printer/Epson-Stylus_CX5100
 #gptofoo escp2-cx5200 printer/Epson-Stylus_CX5200
@@ -237,6 +238,7 @@
 #gptofoo escp2-cx6600 printer/Epson-Stylus_CX6600
 #gptofoo escp2-cx8300 printer/Epson-Stylus_CX8300
 #gptofoo escp2-cx8400 printer/Epson-Stylus_CX8400
+#gptofoo escp2-dx3800 printer/Epson-Stylus_DX3800
 #gptofoo escp2-cl700 printer/Epson-CL_700
 #gptofoo escp2-cl750 printer/Epson-CL_750
 #gptofoo escp2-cl760 printer/Epson-CL_760
