@@ -1848,6 +1848,7 @@ Epson Stylus CX3200            escp2-cx3200    EPSON Stylus CX-3200
 Epson Stylus CX3500            escp2-cx3500    EPSON Stylus CX-3500
 Epson Stylus CX3600            escp2-cx3600    EPSON Stylus CX-3600
 Epson Stylus CX3650            escp2-cx3650    EPSON Stylus CX-3650
+Epson Stylus CX3800            escp2-cx3800    EPSON Stylus CX-3800
 Epson Stylus CX4600            escp2-cx4600    EPSON Stylus CX-4600
 Epson Stylus CX5100            escp2-cx5100    EPSON Stylus CX-5100
 Epson Stylus CX5200            escp2-cx5200    EPSON Stylus CX-5200
@@ -1858,6 +1859,7 @@ Epson Stylus CX6400            escp2-cx6400    EPSON Stylus CX-6400
 Epson Stylus CX6600            escp2-cx6600    EPSON Stylus CX-6600
 Epson Stylus CX8300            escp2-cx8300    EPSON Stylus CX-8300
 Epson Stylus CX8400            escp2-cx8400    EPSON Stylus CX-8400
+Epson Stylus DX3800            escp2-dx3800    EPSON Stylus DX-3800
 Epson CL-700                   escp2-cl700     EPSON CL-700
 Epson CL-750                   escp2-cl750     EPSON CL-750
 Epson CL-760                   escp2-cl760     EPSON CL-760
